# MoE-xLSTM

./: .gitignore  hello.py  model_config.yaml  pyproject.toml  trainer_arguments.yaml
moe_xlstm/: __init__.py  config.py
moe_xlstm/modeling/: moe.py
moe_xlstm/modules/: __init__.py  mlstm_moe.py  model.py  output.py
moe_xlstm/trainer/: __init__.py  arguments.py  trainer.py
moe_xlstm/utils/: weights.py
