[project]
name = "moe-xlstm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "matplotlib>=3.10.0",
    "ninja>=1.11.1.3",
    "safetensors>=0.5.2",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "triton>=3.1.0",
    "xlstm>=2.0.2",
]
