[project]
name = "moe-xlstm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=3.0.1",
    "einops>=0.8.0",
    "safetensors>=0.4.5",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "xlstm>=1.0.6",
]

[dependency-groups]
dev = [
    "tensorboardx>=2.6.2.2",
]
